# SenseVoice.cpp

./: .gitignore  .gitmodules
examples/: CMakeLists.txt
examples/quantize/: CMakeLists.txt  quantize.cc
examples/stream/: CMakeLists.txt
sense-voice/csrc/: CMakeLists.txt  audio_buffer.cc  audio_buffer.h  audio_capture.cc  audio_capture.h  common.h  sense-voice-decoder.cc  vad_detector.cc  vad_detector.h
